--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "argon2": "^0.30.3",
     "chalk": "^4.1.2",
     "connect-sqlite3": "^0.9.13",
+    "crono": "^0.0.3",
+    "crypto": "^1.0.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
@@ -52,6 +54,7 @@
     "express-session": "^1.17.3",
     "extensionless": "^1.1.0",
     "glob": "^8.1.0",
+    "googleapis": "^144.0.0",
     "ip": "^1.1.8",
     "joi": "^17.9.1",
     "multer": "^1.4.5-lts.1",
@@ -59,6 +62,7 @@
     "nodemailer": "^6.9.1",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.4",
-    "typeorm": "^0.3.15"
+    "typeorm": "^0.3.15",
+    "winston": "^3.17.0"
   }
 }
